updated readme and views

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-An ongoing side project! Please feel free to peruse the source code and check out the website at calbelden.com.
+This is an ongoing side project. Please feel free to peruse the source code and check out the website at calbelden.com.
