--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is an ongoing side project. Please feel free to peruse the source code and check out the website at calbelden.com.
+This is a web-app version of my personal site, calbelden.com. I have recently ported everything over to a static site which is hosted using GitHub. I've left this code up though for anyone (myself included) who would like to make a Flask app in the future.
